# lastfm-to-ytm

./: .dockerignore  .env.example  .gitignore  .release-please-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.docker.md  README.md  SECURITY.md  babel.cfg  babel_js_extractor.py  biome.jsonc  cliff.toml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  precommit.sh  pyproject.toml  requirements.txt  run-docker.sh  run.py  run_tags.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  lint.yml  release-please.yml
config/: custom_playlists.json.example  search_overrides.json.example  tag_overrides.json.example
devops/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py
docs/: architecture.md  channels.md  cli-install.md  configuration.md  dashboard.md  development.md  docker-internals.md  docker-reference.md  history.md  how-it-works.md  i18n.md  index.md  linting.md  local-history.md  overrides.md  playlist-sync-internals.md  quickstart.md  releases.md  screenshot-automation.md  search-internals.md  security-model.md  security.md  tag-playlists.md  teleporter.md  testing.md  troubleshooting.md  web-internals.md  webhooks.md
scripts/: gen_social_preview.py  gen_structure.py  install.sh  regen-screenshots.sh  sync_docker_readme.py
src/: __init__.py  config.py  context.py  lastfm.py  main.py  playlist.py  recency.py  search.py  webhook.py  weekly.py  ytm_client.py
src/cache/: __init__.py  playlist.py  search.py  tags.py
src/history/: __init__.py  db.py
src/lastfm/: __init__.py  fetch.py  local_db.py  scrobble.py
src/observability/: __init__.py  failure_log.py  history_recording.py  http_status.py  webhooks.py
src/playlist/: __init__.py  discover.py  metrics.py  preview.py  sync.py  weekly.py
src/recency/: __init__.py  weighting.py
src/search/: __init__.py  executor.py  metrics.py  normalization.py  queries.py  resolver.py  scoring.py  similarity.py
src/tags/: __init__.py  discovery.py  filter.py  resolver.py  sync.py  templates.py
src/workflows/: __init__.py  _common.py  backfill.py  main_sync.py  tag_sync.py
src/ytm/: __init__.py  client.py  operations.py
tests/: conftest.py  test_config.py  test_discover.py  test_discovery.py  test_env_file.py  test_env_reconcile.py  test_failure_log.py  test_history_db.py  test_history_recording.py  test_http_status.py  test_json_cache.py  test_local_db.py  test_normalization.py  test_notifications_store.py  test_playlist_cache.py  test_playlist_preview.py  test_playlist_rename.py  test_queries.py  test_scoring.py  test_search_cache.py  test_search_resolver.py  test_similarity.py  test_sync_helpers.py  test_tag_cache.py  test_tag_filter.py  test_tags_resolver.py  test_teleporter_lastfm.py  test_templates.py  test_theme_overrides.py  test_update_check.py  test_web_data.py  test_web_routes.py  test_webhook.py  test_weekly.py  test_weighting.py
tests/frontend/: conftest.py  test_dashboard.py
tests/screenshots/: _serve.py  generate.py
tests/screenshots/fixtures/cache/: .last_run_log.json  .playlist_cache.json  .search_cache.json  .tag_cache.json
tests/screenshots/fixtures/config/: custom_playlists.json  search_overrides.json  tag_overrides.json
web/: __init__.py  app.py  run_log.py
web/i18n/: __init__.py  extractor.py
web/routes/: __init__.py  actions.py  api.py  auth.py  events.py  notifications.py  sync.py
web/services/: __init__.py  dashboard.py  data.py  env.py  events.py  export.py  notifications.py  scheduler.py  state.py  teleporter.py  theme.py  update_check.py
web/static/: manifest.json
web/static/css/: base.css  bundle.css  cache-admin.css  components.css  layout.css  modals.css  responsive.css  settings.css  sync-drawer.css  tabs.css  tooltips.css  tracks.css  variables.css
web/static/js/: app.js
web/static/js/modules/: auth.js  cacheAdmin.js  customPlaylists.js  customTheme.js  delegation.js  events.js  exportMenu.js  filters.js  history.js  i18n.js  modals.js  notifications.js  playlistGraph.js  playlists.js  settings.js  setup.js  sync.js  tabs.js  tagInput.js  teleporter.js  tooltips.js  utils.js  visibility.js
web/templates/: base.html  dashboard.html
web/templates/macros/: _track_actions.html
web/templates/partials/: _custompl_tracks.html  _modal_cache_admin.html  _modals.html  _panel_blacklist.html  _panel_cache.html  _panel_custompl.html  _panel_history.html  _panel_notfound.html  _panel_overrides.html  _panel_playlist.html  _panel_playlists.html  _panel_settings.html  _panel_sync.html  _panel_tags.html  _stats.html  _tabs.html  _update_pill.html
web/translations/de/LC_MESSAGES/: messages.po
web/translations/en/LC_MESSAGES/: messages.po
