[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lastfm-to-ytm"
version = "0.1.0"
description = "Sync Last.fm listening history to YouTube Music playlists"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.1.1",
  "requests==2.32.5",
  "text-unidecode==1.3",
  "ytmusicapi==1.11.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "j2lint>=1.2.0"]
web = ["flask>=3.0.0", "apscheduler>=3.10.0", "gunicorn>=21.0.0"]

[project.scripts]
lastfm-ytm-sync = "run:run"
lastfm-ytm-web = "web.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.j2lint]
# Biome does not read pyproject.toml - its config lives in biome.jsonc.
# Rule ignore rationale lives inline in biome.jsonc comments.
ignore = [
  "S3",  # {%- -%} whitespace control is used intentionally throughout templates
  "S4",  # false positives on Jinja expressions indented inside HTML blocks
  "S6",  # inline {% if %}...{% endif %} is the deliberate style for short branches
  "V1",  # variable naming follows Python conventions, not AVD-style UPPER_SNAKE
  "V2",  # same rationale as V1
]

[tool.ruff]
line-length = 150  # 150 matches Biome's lineWidth; longer lines reduce forced wraps in deeply nested code
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "ERA",  # eradicate (commented-out code)
  "PL",   # pylint
  "PERF", # perflint
  "RUF",  # ruff-specific rules
  "C4",   # flake8-comprehensions
  "PIE",  # flake8-pie
  "T20",  # flake8-print (catches debug prints)
  "LOG",  # flake8-logging
  "D",    # pydocstyle
]
ignore = [
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
  "RET504",  # unnecessary assignment before return
  "D100",    # missing docstring in public module
  "D104",    # missing docstring in public package
  "D107",    # missing docstring in __init__
  "PLR0912", # too many branches
  "PLR0915", # too many statements
  "PLR0911", # too many return statements
  "PLW0603", # global statement
  "RUF001",  # ambiguous unicode
  "PLC0415", # import not at top level
]

[tool.ruff.lint.per-file-ignores]
"run.py" = ["T20"]                 # allow print in entrypoint
"src/lastfm/fetch.py" = ["ARG001"] # signature must match socket.getaddrinfo

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "google"
