[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lastfm-to-ytm"
version = "2.5.0"
description = "Sync Last.fm listening history to YouTube Music playlists"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.2.2",
  "requests==2.34.2",
  "text-unidecode==1.3",
  "ytmusicapi==1.12.1",
]

[project.optional-dependencies]
dev = ["ruff==0.15.20", "j2lint==1.2.0", "pytest==9.1.1", "pytest-cov==7.1.0", "mypy==2.1.0", "types-requests==2.33.0.20260518"]
web = ["flask==3.1.3", "flask-babel==4.0.0", "apscheduler==3.11.3", "gunicorn==26.0.0", "cryptography==49.0.0", "argon2-cffi==25.1.0"]
docs = ["mkdocs-material==9.7.6"]
web-docs = ["playwright==1.61.0", "Pillow==12.3.0"]

[project.scripts]
lastfm-ytm-sync = "run:run"
lastfm-ytm-tags = "run_tags:run"
lastfm-ytm-web = "web.app:main"

[project.entry-points."babel.extractors"]
js = "web.i18n.extractor:extract_js"

[tool.setuptools]
py-modules = ["run", "run_tags"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "web*"]

[tool.ruff]
line-length = 150  # 150 matches Biome's lineWidth; longer lines reduce forced wraps in deeply nested code
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "ERA",  # eradicate (commented-out code)
  "PL",   # pylint
  "PERF", # perflint
  "RUF",  # ruff-specific rules
  "C4",   # flake8-comprehensions
  "PIE",  # flake8-pie
  "T20",  # flake8-print (catches debug prints)
  "LOG",  # flake8-logging
  "D",    # pydocstyle
]
ignore = [
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
  "RET504",  # unnecessary assignment before return
  "D100",    # missing docstring in public module
  "D104",    # missing docstring in public package
  "D107",    # missing docstring in __init__
  "PLR0912", # too many branches
  "PLR0915", # too many statements
  "PLR0911", # too many return statements
  "PLW0603", # global statement
  "RUF001",  # ambiguous unicode
  "PLC0415", # import not at top level
]

[tool.ruff.lint.per-file-ignores]
"run.py" = ["T20"]                 # allow print in entrypoint
"scripts/*.py" = ["T20"]           # dev-only CLI helpers: allow print
"src/lastfm/fetch.py" = ["ARG001"] # signature must match socket.getaddrinfo
"tests/screenshots/*.py" = ["T20", "D", "E501"] # dev-only CLI: prints + literal fixture rows
"tests/test_*.py" = ["D", "PLR2004"]            # tests: no docstrings, allow literal assertions
"tests/test_webhook.py" = ["D", "PLR2004", "ARG001"] # + stub signatures must match socket.getaddrinfo / requests.post
"tests/test_discovery.py" = ["D", "PLR2004", "ARG001"] # + stub signatures must match the Last.fm fetch helpers
"tests/conftest.py" = ["ARG001"] # web fixtures depend on each other for monkeypatch side effects
"tests/frontend/*.py" = ["D", "PLR2004", "SLF001"] # frontend tests: no docstrings, literal assertions, reuse fixture-server helpers

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
  "frontend: end-to-end dashboard tests that require Playwright + a browser",
]

[tool.coverage.run]
source = ["src", "web"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
files = ["src", "web", "run.py", "run_tags.py"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ytmusicapi.*", "flask_babel.*", "apscheduler.*", "text_unidecode.*", "unidecode.*"]
ignore_missing_imports = true
